# VSphereReporter

./: .replit  =3.0.0  CHANGELOG-v10.txt  CHANGELOG-v16.txt  CHANGELOG-v17.txt  CHANGELOG-v18.txt  CHANGELOG-v19.txt  CHANGELOG-v20.txt  CHANGELOG-v21.txt  CHANGELOG-v24.2.txt  CHANGELOG-v24.3-final.txt  CHANGELOG-v24.3.txt  CHANGELOG-v24.txt  CHANGELOG-v29.1-final-fixed-v11.txt  CHANGELOG-v29.1-final.txt  CHANGELOG-v29.1.txt  CHANGELOG-v9.txt  INSTALLATIONSANLEITUNG.md  MSI-INSTALLER-ANLEITUNG.md  README-INSTALLER.md  README-MSI-INSTALLER.md  README-V29.1-FIXED.md  README-VMDK-DEBUG.txt  README-VMDK-DEFINITION-FINAL.txt  README-ZIP.txt  README.md  create_msi_installer.bat  debug_cli.bat  demo.html  fix_anchors.py  fix_logo.py  installer_builder.py  installer_gui.py  pyproject.toml  replit.nix  run.bat  setup.bat  setup.py  setup.sh  update_styles.py  (+4 more)
DirectDownload/: index.html
attached_assets/: Get-VMwareInfrastructureReport.ps1  Pasted-2025-04-15-02-18-28-828-INFO-Verbinde-mit-vCenter-labvcenter-lab-local-2025-04-15-02-18-28-972-1744676621219.txt  Pasted-Fehlerprotokoll-Hinweis-Es-wurden-Fehler-bei-der-Datensammlung-festgestellt-Dies-kann-die-Vollst--1746577697402.txt  Pasted-Logo-VMware-vSphere-Reporter-v18-Diagnose-Dashboard-VMDK-Rohdaten-Abmelden-Dashboard-VMDK-Rohd-1746527903510.txt  Pasted-Um-verwaiste-VMDK-Dateien-virtuelle-Festplatten-die-keiner-virtuellen-Maschine-mehr-zugeordnet-sin-1746520646831.txt  Pasted-runlvl-desktop-psa1434-Downloads-VSphereReporter-setup-sh-VMware-vSphere-Reporter-Setup-Scrip-1744545943595.txt  vsphere_debug_20250415_021821.txt
(+396 files in other folders)
