[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cx-freeze>=8.1.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "humanize>=4.12.2",
    "jinja2>=3.1.6",
    "pyecharts>=2.0.8",
    "pyqt5>=5.15.11",
    "python-docx>=1.1.2",
    "pyvmomi>=8.0.3.0.1",
    "reportlab>=4.3.1",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
]
